--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>TO Do</title>
   </head>
   <body>
-    <div id="root"><h1>hi there</h1></div>
+    <div id="root"></div>
   </body>
 </html>
